# msp430

./: .gitignore  README.md  build.gradle.kts  settings.gradle  settings.gradle.kts
android/: build.gradle  build.gradle.kts  local.properties
android/art/: button.xcf  led.xcf
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/res/drawable/: drawable_button.xml  ic_base.xml  ic_elbow.xml  ic_wrist.xml  launcher_foreground.xml  shape_circle_surface.xml  shape_rectangle_accent.xml  shape_rectangle_rounded_surface.xml  shape_rectangle_surface.xml
android/src/main/res/layout/: fragment_control.xml  fragment_home.xml  fragment_locate.xml  fragment_shapes.xml  main.xml
android/src/main/res/menu/: menu_navigation.xml
android/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  palette.xml  strings.xml  style.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
math/: Kinematics.ggb
native/: CMakeLists.txt  Makefile  README.md  build.gradle  build.sh  debug.sh  flash.sh  platformio.ini
native/cmake/: CMakeLists.txt  msp430-origin.cmake  msp430.cmake
native/legacy/: CMakeLists.txt
native/legacy/cmake/: msp430.cmake
native/legacy/src/: i2c.c  main.c  pca9685.h  servo.c  servo.h  uart.c  uart.h
native/src/: PwmController.cpp  PwmController.h  PwmController.hpp  Servo.cpp  Servo.h  Servo.hpp  bluetooth.c  hardware.h  i2c.c  i2c.h  led.cpp  led.hpp  main.c  main.cpp  pwm.cpp  pwm.h  servo.c  servo.h  system.cpp  system.h  system.hpp  uart.c  uart.cpp  uart.h
native/src/include/: bluetooth.h  i2c.h  servo.h
native/src/source/: bluetooth.c  i2c.c  main.c  servo.c
native/src_old/include/: servo.h
native/src_old/source/: main.c
new/: build.gradle.kts
new/src/main/: AndroidManifest.xml
new/src/main/res/drawable/: drawable_button.xml  drawable_button_checked.xml  selection_button.xml  selector_button.xml  selector_button_reset.xml  selector_navigation.xml  selector_seekbar_thumb.xml  (+3 more)
(+128 files in other folders)
